force-app/main/default/objects/AI_Feedback__c/AI_Feedback__c.object-meta.xml
<CustomObject>
    <label>AI Feedback</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>AI Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>