force-app/main/default/objects/AI_Feedback__c/fields/Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comments__c</fullName>
    <label>Agent Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>