force-app/main/default/objects/AI_Feedback__c/fields/AI_Suggestion_Type__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion_Type__c</fullName>
    <label>AI Suggestion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Classification</fullName>
            </value>
            <value>
                <fullName>Priority Prediction</fullName>
            </value>
            <value>
                <fullName>Suggested Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>