force-app/main/default/objects/AI_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Feedbacks</relationshipLabel>
    <relationshipName>AI_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>